--- a/main-Section3.css
+++ b/main-Section3.css
@@ -29,7 +29,7 @@
 .pointText:hover {
     color: var(--mege-font-color);
 }
-.fixed-side-container ul {
+.fixed-side-1 {
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -38,7 +38,7 @@
     align-items: center;
     text-align: center;
 }
-.fixed-side-container li {
+.fixed-side-1 li {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -65,8 +65,9 @@
     text-decoration: none;
     gap: 2px;
 }
-
-
+#quickBtn {
+    display: none;
+}
 
 .main-section-3 {
     display: flex;
@@ -94,7 +95,7 @@
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: flex-start;    
     margin-bottom: 3rem;
 }
 
@@ -212,6 +213,7 @@
 
 }
 
+
 .hiddenContactBtn {
     display: none;
 }
@@ -266,6 +268,34 @@
         font-size: 0.8rem;
     }
 
+.f-hdn {
+    display: flex !important;
+}
+.fixed-side-1 li {
+    display: none;
+}
+.fixed-side-title {
+    font-size: 11px;
+}
+.fixed-side-text {
+    font-size: 1rem;
+}
+#quickBtn {
+    display: flex;
+}
+#quickBtn:hover {
+    background: none;
+}
+
+.fixed-side-container {
+    align-items: end;
+    bottom: 1rem;
+    right: -2rem;
+}
+.fixed-side-container li {
+    width: 80px;
+    height: 80px;
+};
 }
 
 @media (max-width: 760px) {
