--- a/main-Section3.css
+++ b/main-Section3.css
@@ -1,73 +1,5 @@
 /* 사이드 Fixed a태그 */
-.fixed-side-container {
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    right: 1rem;
-    width: 12rem;
-    height: 100%;
-    z-index: 1;
-}
-.fixed-side-container p {
-    color: white;
-}
-.fixed-side-title {
-    font-weight: 300;
-    font-size: 14px;
-}
-.fixed-side-text {
-    font-weight: bold;
-    font-size : 1.2rem
-}
-.sideLineHeight {
-    line-height: 1.2rem;
-}
-.pointText p {
-    color: var(--mega-yellow-color);
-}
-.pointText:hover {
-    color: var(--mege-font-color);
-}
-.fixed-side-1 {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    width: 4rem;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-.fixed-side-1 li {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    border-radius: 100%;
-    width: 110px;
-    height: 110px;
-    background-color: var(--mega-footer-color);
-}
 
-.fixed-side-container li:hover{
-    background-color: var(--mega-yellow-color);
-    cursor: pointer;
-    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.3);
-}
-.fixed-side-container li:hover p{
-    color : var(--mege-font-color)
-}
-
-.fixed-side-container a{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-    gap: 2px;
-}
-#quickBtn {
-    display: none;
-}
 
 .main-section-3 {
     display: flex;
@@ -233,7 +165,7 @@
     transform: translateY(-5px);
     transition: 0.5s;
     cursor: pointer;
-    background-color: rgb(115, 71, 21);
+    background-color: var(-mega-side-btn-hover-color);
 }
 
 .hidden {
@@ -268,34 +200,7 @@
         font-size: 0.8rem;
     }
 
-.f-hdn {
-    display: flex !important;
-}
-.fixed-side-1 li {
-    display: none;
-}
-.fixed-side-title {
-    font-size: 11px;
-}
-.fixed-side-text {
-    font-size: 1rem;
-}
-#quickBtn {
-    display: flex;
-}
-#quickBtn:hover {
-    background: none;
-}
 
-.fixed-side-container {
-    align-items: end;
-    bottom: 1rem;
-    right: -2rem;
-}
-.fixed-side-container li {
-    width: 80px;
-    height: 80px;
-};
 }
 
 @media (max-width: 760px) {
