--- a/header_Nav.css
+++ b/header_Nav.css
@@ -6,6 +6,7 @@
     --mega-yellow-color: rgb(253, 208, 0);
     --mega-footer-color: rgb(33, 33, 33);
     color: var(--mega-font-color);
+    background-color: lightgreen;
 }
 .header-section {
     display: flex;
@@ -15,11 +16,19 @@
     top: 0;
     width: 100%;
     height: 6.5rem;
-    background: white;
+    /* background: white; */
     border: 1px solid #ccc;
     text-align: center;
     z-index: 2 !important;
-    
+    color: RGB(35,24,21);
+    list-style-type: none;
+}
+.header-section:hover{
+    background-color: white;
+}
+
+ul li{
+    list-style-type: none;
 }
 .wrap {
     position: relative;
@@ -27,3 +36,13 @@
     height: 5000px;
     text-align: center;
 }
+.nav_list{
+    display: flex;
+    gap: 1rem
+}
+nav{
+    width:80%;
+    overflow:hidden;
+    height:6rem;
+    margin:4rem auto;
+    display: flex;}
