--- a/header_Nav.css
+++ b/header_Nav.css
@@ -6,9 +6,13 @@
     --mega-yellow-color: rgb(253, 208, 0);
     --mega-footer-color: rgb(33, 33, 33);
     color: var(--mega-font-color);
-    background-color: lightgreen;
+    /* background-color: lightgreen; */
+}
+body{
+    background-color: lightgreen;    
 }
 .header-section {
+    /* margin: 0; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,17 +20,22 @@
     top: 0;
     width: 100%;
     height: 6.5rem;
-    /* background: white; */
     border: 1px solid #ccc;
+    /* background-color: rgb(94, 82, 60); */
     text-align: center;
     z-index: 2 !important;
     color: RGB(35,24,21);
     list-style-type: none;
 }
 .header-section:hover{
+    transition: 0.4s;
     background-color: white;
 }
-
+.header_nav_bar_logo_img{
+    height: 4rem;
+    width: 12rem;
+    
+}
 ul li{
     list-style-type: none;
 }
@@ -38,7 +47,20 @@ ul li{
 }
 .nav_list{
     display: flex;
-    gap: 1rem
+    gap: 1rem;
+    
+}
+#nav_bar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  position: relative;
+}
+
+#nav_bar a:first-child {
+  position: absolute;
+  left: 2rem; /* 왼쪽으로 붙이기 */
 }
 nav{
     width:80%;
