--- a/main-Section3.css
+++ b/main-Section3.css
@@ -8,7 +8,6 @@
     width: 100%;
     height: 945px;
     background: var(--mega-yellow-color);
-    border: 1px solid white;
     text-align: center;
 }
 
@@ -22,11 +21,10 @@
 
 .main-section-3-article-1 ul {
     height: auto;
-    margin: 0 10%;
-    padding: 8%;
+    margin: 2%;
+    padding: 15%;
     width: 100%;
     display: flex;
-    align-items: center;
     justify-content: flex-start;    
     margin-bottom: 3rem;
 }
@@ -37,17 +35,18 @@
     text-align: left;
     flex: 1;
     min-width: 0;
+    padding-right: 2rem;
 }
 
 #main-3-content--2 {
-    width: 100%;
-    height: 100%;
+    width: 515px;
+    height: 400px;
     flex: 1;
 }
 
 .main-section-3-article-1 h1 {
     font-weight: 900;
-    font-size: 4rem;
+    font-size: 3.8rem;
     font-family: 'Roboto', sans-serif;
     line-height: 1;
     letter-spacing: -1px;
@@ -64,10 +63,11 @@
 
 .main-section-3-article-1 iframe {
     position: absolute;
+    overflow: hidden;
     width: 100%;
     height: 100%;
-    top: 0;
-    left: 0;
+    top: 0px;
+    right: 0px;
     margin: 0;
 }
 
@@ -85,7 +85,7 @@
 
 .main-3-content-wrap {
     display: flex;
-    width: 15rem;
+    width: 30rem;
     justify-content: flex-start;
     flex-direction: column;
     margin: 0;
@@ -93,10 +93,10 @@
 
 .main-3-content {
     width: 100%;
-    margin: 0;
     margin-bottom: 1rem;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     font-weight: 900;
+    margin: 1rem 0;
 }
 
 
@@ -111,59 +111,65 @@
     font-size: 0.9rem;
     font-weight: 300;
 }
+.hidden {
+    width: 80%;
+}
 
-
-#megaCoffeSpan {
+.main3-megaCoffeSpan {
+    width: 100%;
     position: relative;
     width: auto;
     height: auto;
     z-index: 1;
 }
 
-#megaCoffeSpan::before {
+.main3-megaCoffeSpan::before {
     content: "";
     position: absolute;
     bottom: -1%;
-    width: 105%;
+    width: 110%;
     left: -5%;
-    height: 2rem;
+    height: 50%;
     background-color: white;
     z-index: -1;
 }
 
-.font-w {
+.main3-font-w {
     font-weight: 900;
     line-height: 3.5rem;
     font-size: 3rem;
+    width: 92%;
     margin: 0;
-    margin-bottom: 1rem;
 }
 
-.font-w-m {
+.main3-font-w-m{
     font-weight: 900;
     font-size: 2.3rem;
 
 }
 
 
-.hiddenContactBtn {
+.main3-hiddenContactBtn {
     display: none;
+    transition: 0.4s;
 }
 
-.hiddenContactBtn button {
+.main3-hiddenContactBtn button {
     transform: translateY(0);
 }
-
+#youtubeContactBtn {
+    transition: 0.4s;
+}
 #youtubeContactBtn:hover {
     transform: translateY(-5px);
-    transition: 0.5s;
+    transition: 0.2s;
     cursor: pointer;
     background-color: rgb(115, 71, 21);
 }
 
-.hiddenContactBtn button:hover {
+.main3-hiddenContactBtn button:hover {
     transform: translateY(-5px);
-    transition: 0.5s;
+    transition: 0.2s;
     cursor: pointer;
     background-color: var(-mega-side-btn-hover-color);
 }
@@ -206,6 +212,7 @@
 @media (max-width: 760px) {
     .main-section-3-article-1 ul {
         flex-direction: column;
+        width: 100%;
         gap: 1rem;
     }
 
@@ -218,4 +225,41 @@
         gap: 1rem;
         margin-top: 1rem;
     }
+    .main3-font-w {
+        width: 100%;
+    }
+    .main-3-content-wrap {
+        width: 100%;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: left;
+        transform: scale(0.85);
+        transform-origin: top left;
+    }
+    #main-3-content--1 {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: left;
+        margin: 0;
+        flex: 0;
+        transform: scale(0.85);
+        transform-origin: top left;
+        padding: 0;
+    }
+    .main-3-content-bottom {
+        margin-top: -2rem;
+        width: 100%;
+    }
+    #main-3-content--2 {
+        width: 100%;
+    }
+    .main-section-3-article-1 ul {
+        display: flex;
+        padding : 4rem 2rem;
+    }
+    .main-3-content-bottom p:nth-child(2) {
+    font-size: 1rem;
+}
 }
