--- a/1024 head+main345/mainSection1.css
+++ b/1024 head+main345/mainSection1.css
@@ -3,38 +3,66 @@
     overflow: hidden;
 }
 
-#main > article{
+#main1-wrap{
     width:100%;
     height:100vh;
     overflow: hidden;
 }
-#main-slide{
+
+
+/* slide */
+#main1-slide{
+    width: auto;
+    height: 100vh;
     display: flex;
     transition: transform 0.6s ease;
 }
 
-.slide-item{
-    flex-shrink: 0;
-    width:100vw;
-    height:100vh;
+.main1-slide-item{
+    flex:0 0 100vw;
+    position: relative;
 }
 
-.slide-img{
-    width:100%;
-    height:100vh;
-    background-image:url();
-    background-position: center;
-    background-size: cover;
+.main1-slide-item img {
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 /* scroll-icon */
 
 #icon-box {
     position:absolute;
-    bottom:4rem;
+    bottom:3.8rem;
     color:#fff;
     cursor: pointer;
     animation: icon_move 1.5s linear infinite;
+}
+
+@keyframes icon_move {
+    0% {
+        opacity: 0.3;
+        transform: translateY(-10%);
+    }
+    25% {
+        opacity: 0.5;
+        transform: translateY(0%);
+    }
+    50% {
+        opacity: 0.8;
+        transform: translateY(10%);
+    }
+    75% {
+        opacity: 0.5;
+        transform: translateY(0%);
+    }
+    100% {
+        opacity: 0.3;
+        transform: translateY(-10%);
+    }
 }
 
 .icon-mouse {
@@ -49,11 +77,18 @@
 
 .icon-wheel {
     position:absolute;
-    left:7px;
+    left:8px;
     width: 4px;
     height: 8px;
     background: #fff;
     border-radius: 4px;
+    animation: wheel_move 1.5s linear infinite;
+}
+
+@keyframes wheel_move {
+    0% {transform: translateY(0)}
+    50% {transform: translateY(200%)}
+    0% {transform: translateY(0);}
 }
 
 .icon-text {
@@ -61,33 +96,25 @@
     margin:5px 0;
 }
 
-@keyframes icon_move {
-    0% {
-        opacity: 0.3;
-        transform: translateY(-10%);
-    }
-    25% {
-        opacity: 0.7;
-        transform: translateY(0%);
-    }
-    50% {
-        opacity: 1;
-        transform: translateY(10%);
-    }
-    75% {
-        opacity: 0.7;
-        transform: translateY(0%);
-    }
-    100% {
-        opacity: 0.3;
-        transform: translateY(-10%);
-    }
-}
-
-/* dots */
+/* dots control box */
 .controls {
     position:absolute;
+    bottom:2rem;
     display: flex;
-    gap:10px;
+    gap:8px;
     z-index: 5;
+    cursor: pointer;
+}
+
+.dot {
+    width: 20px;
+    height: 8px;
+    background: #fff;
+    opacity: 0.5;
+    border-radius: 0.25rem;
+}
+
+.active {
+    width: 48px;
+    opacity: 1;
 }
