--- a/index.css
+++ b/index.css
@@ -56,7 +56,7 @@ ul {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 945px;
+  height: 100vh;
   background: #ccc;
   border: 1px solid white;
   text-align: center;
