--- a/main 1/mainSection1.css
+++ b/main 1/mainSection1.css
@@ -49,29 +49,13 @@
     color:#fff;
     cursor: pointer;
     animation: icon_move 1.5s linear infinite;
+    transform: translateY(-2rem);
 }
 
 @keyframes icon_move {
-    0% {
-        opacity: 0.3;
-        transform: translateY(-10%);
-    }
-    25% {
-        opacity: 0.5;
-        transform: translateY(0%);
-    }
-    50% {
-        opacity: 0.8;
-        transform: translateY(10%);
-    }
-    75% {
-        opacity: 0.5;
-        transform: translateY(0%);
-    }
-    100% {
-        opacity: 0.3;
-        transform: translateY(-10%);
-    }
+    0% {bottom:10px; opacity: 1;}
+    50% {bottom:0px; opacity: 0.2;}
+    100% {bottom:10px; opacity: 1;}
 }
 
 .icon-mouse {
@@ -95,9 +79,9 @@
 }
 
 @keyframes wheel_move {
-    0% {transform: translateY(0)}
-    50% {transform: translateY(200%)}
-    0% {transform: translateY(0);}
+    0% {transform: translateY(-12px); opacity: 0;}
+    50% {transform: translateY(5px); opacity: 1;}
+    100% {transform: translateY(12px); opacity: 0;}
 }
 
 .icon-text {
@@ -108,7 +92,7 @@
 /* dots control box */
 .controls {
     position:absolute;
-    bottom:2rem;
+    bottom:1rem;
     display: flex;
     gap:8px;
     z-index: 5;
