--- a/notice/Notice.css
+++ b/notice/Notice.css
@@ -1,6 +1,6 @@
 
 * {
-    margin: auto;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     text-align: center;
@@ -20,17 +20,17 @@
     align-items: center;     
 }
 
-.header-inner {
+.notice-header-inner {
     padding: 2.5rem;
 }
 
-.header-inner h4 {
+.notice-header-inner h4 {
     color: #fff;
     font-size: clamp(1.2rem, 2.1vw, 1.2rem);
     margin-bottom: 10px;
 }
 
-.header-inner h1 {
+.notice-header-inner h1 {
     color: yellow;
     font-size: clamp(2rem, 5vw, 3rem);
     margin-bottom: 20px;
@@ -80,6 +80,7 @@
     justify-content: center;
     text-align: center;
     max-width: 1280px;
+    margin: auto;
 }
 
 .notice-table{
@@ -108,6 +109,7 @@
     justify-content: left;
     gap: 0.2rem;
     /* margin:10px */
+    margin: auto;
     
 }
 .notice-input-search button{
